@@ -21,6 +21,10 @@
 	* lib/access.c (is_valid): Don't deny access if map does not
 	exist (else the error code is wrong).
 
+2003-02-12  Thorsten Kukuk  <kukuk@suse.de>
+
+	* lib/log_msg.c (log_msg): Use new file handle debug_output.
+
 2003-02-05  Thorsten Kukuk  <kukuk@suse.de>
 
 	* release version 2.8
